<resources>
    <string name="app_name">Prueba Android</string>
    <string name="ejemplo">Ejemplo</string>
    <string name="tv_titulo">Título</string>
    <string name="tv_descripcion">Descripción</string>
    <string name="tv_puntuacion">Puntuación</string>
    <string name="tv_fechaLan">Fecha de lanzamiento</string>
    <string name="tv_video">Vídeo</string>
    <string name="msg_importante">Importante</string>
    <string name="msg_salir">¿Desea salir de la aplicación?</string>
    <string name="msg_si">Si</string>
    <string name="msg_no">No</string>
    <string name="msg_aceptar">Aceptar</string>
</resources>