<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <include layout="@layout/actionbar_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/linearHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:background="@color/blue_700">

            <ImageView
                android:id="@+id/iv_icono"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:src="@drawable/noimagen"
                android:padding="@dimen/paddingCardView"
                />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/linearHeader"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/paddingGeneral"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_titulo"
                    android:textAlignment="textStart"
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/textInformacion"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ejemplo"
                    android:textSize="@dimen/textDetalle"
                    android:textColor="@color/blackText"
                    android:textAlignment="textEnd"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue_500"
                    android:layout_marginTop="@dimen/paddingCardView"
                    android:layout_marginBottom="@dimen/paddingCardView"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_descripcion"
                    android:textAlignment="textStart"
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/textInformacion"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ejemplo"
                    android:textSize="@dimen/textDetalle"
                    android:textColor="@color/blackText"
                    android:textAlignment="textEnd"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue_500"
                    android:layout_marginTop="@dimen/paddingCardView"
                    android:layout_marginBottom="@dimen/paddingCardView"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_puntuacion"
                    android:textAlignment="textStart"
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/textInformacion"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_puntuacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ejemplo"
                    android:textSize="@dimen/textDetalle"
                    android:textColor="@color/dorado"
                    android:textAlignment="textEnd"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue_500"
                    android:layout_marginTop="@dimen/paddingCardView"
                    android:layout_marginBottom="@dimen/paddingCardView"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_fechaLan"
                    android:textAlignment="textStart"
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/textInformacion"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_fechaLan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ejemplo"
                    android:textSize="@dimen/textDetalle"
                    android:textColor="@color/blackText"
                    android:textAlignment="textEnd"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue_500"
                    android:layout_marginTop="@dimen/paddingCardView"
                    android:layout_marginBottom="@dimen/paddingCardView"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_video"
                    android:textAlignment="textStart"
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/textInformacion"
                    android:textStyle="bold" />

                <WebView
                    android:id="@+id/webView"
                    android:layout_marginTop="@dimen/paddingCardView"
                    android:layout_marginBottom="@dimen/paddingGeneral"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    tools:ignore="WebViewLayout">
                </WebView>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>